# MMR-Gen

./: .gitignore  design.md  rtl-gen.cabal  todo.md
rtl-test/: reg_test2.yaml  rs70_complete.yaml  rs70_registers.yaml  rtl_v2.yaml  session_rtl.yaml
src/: Config.hs  ConfigGenerator.hs  Lib.hs
src/AST/: Parser.hs  Register.hs  YamlParser.hs
src/CodeGen/: CGen.hs  CGen2.hs  CodeGen.hs  CodeGenUtils.hs  JavaGen.hs  JavaGen2.hs  Types.hs
