name:                rtl-gen
version:             0.0.2.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/rtl-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      ,CodeGen.CodeGen
                      ,CodeGen.JavaGen2
                      ,CodeGen.CGen
                      ,CodeGen.CGen2
                      ,CodeGen.Types
                      ,CodeGen.CodeGenUtils
                      ,AST.Register
                      ,AST.YamlParser
                      ,AST.Parser
                      ,Config

  build-depends:       base >= 4.7 && < 5
                      ,yaml >= 0.5.8.2
                      ,containers >= 0.5.6
                      ,text
                      ,aeson >= 0.10.0.0
                      ,aeson-pretty >= 0.7.2
                      ,bytestring >= 0.10.6
                      ,vector >= 0.11.0.0
                      ,time >=1.5.0
                      ,optparse-applicative >= 0.12.0.0
                      ,filepath >= 1.4.0.0
                      ,directory >= 1.2.2.0
                      ,mtl >= 2.2.1

  default-language:    Haskell2010

executable rtl-gen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O1
  build-depends:       base
                     , rtl-gen
  default-language:    Haskell2010

test-suite rtl-gen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rtl-gen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rtl-gen
